[gd_scene load_steps=10 format=3 uid="uid://clurnb1k5axha"]

[ext_resource type="Script" uid="uid://da3hf2ylea4n4" path="res://node_2d.gd" id="1_rjkkw"]
[ext_resource type="Texture2D" uid="uid://dth0q8ris033r" path="res://assets/sprites/crates_study_x2.png" id="2_rjkkw"]
[ext_resource type="Script" uid="uid://ckxgjhyxkmo62" path="res://links.gd" id="3_sjeu5"]
[ext_resource type="Script" uid="uid://v71n77655vsv" path="res://rechts.gd" id="4_xncrr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hol4"]
size = Vector2(23.75, 20.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6r6c"]
size = Vector2(8.125, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdubu"]
size = Vector2(7, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypad4"]
size = Vector2(24, 4.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjeu5"]
size = Vector2(24, 5)

[node name="block" type="CharacterBody2D"]
rotation = 0.00237667
slide_on_ceiling = false
wall_min_slide_angle = 3.14159
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_rjkkw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.160004, 0.16)
shape = SubResource("RectangleShape2D_0hol4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.160004, 1.16)
scale = Vector2(-0.095, -0.095)
texture = ExtResource("2_rjkkw")

[node name="links" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_sjeu5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="links"]
position = Vector2(-11.74, 1.11)
scale = Vector2(0.015, 0.855)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="rechts" type="Area2D" parent="."]
position = Vector2(149, 133)
collision_layer = 2
collision_mask = 2
script = ExtResource("4_xncrr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="rechts"]
position = Vector2(-136.965, -131.93)
scale = Vector2(-0.02, 0.82)
shape = SubResource("RectangleShape2D_kdubu")

[node name="oben" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="oben"]
position = Vector2(0.205, -10.77)
scale = Vector2(0.84, 0.015)
shape = SubResource("RectangleShape2D_ypad4")

[node name="unten" type="Area2D" parent="."]
position = Vector2(0, 2)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="unten"]
position = Vector2(0.19, 11.05)
scale = Vector2(0.845, -0.025)
shape = SubResource("RectangleShape2D_sjeu5")

[connection signal="body_entered" from="links" to="." method="_on_links_body_entered"]
[connection signal="body_exited" from="links" to="." method="_on_links_body_exited"]
[connection signal="body_entered" from="rechts" to="." method="_on_rechts_body_entered"]
[connection signal="body_exited" from="rechts" to="." method="_on_rechts_body_exited"]
[connection signal="body_entered" from="oben" to="." method="_on_oben_body_entered"]
[connection signal="body_exited" from="oben" to="." method="_on_oben_body_exited"]
[connection signal="body_entered" from="unten" to="." method="_on_unten_body_entered"]
[connection signal="body_exited" from="unten" to="." method="_on_unten_body_exited"]
